# tilt_poc

./: README.md  Tiltfile
accounts-service/: .dockerignore  .env.example  Dockerfile  pyproject.toml
accounts-service/app/: main.py
accounts-service/scripts/: start-dev.sh  start.sh
k8s/: accounts-service.yaml  postgres.yaml
