[tool.poetry]
name = "account-service"
version = "0.0.1"
description = ""
authors = []
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.29.0"
fastapi = "^0.110.0"
pydantic = "^2.6.4"
asyncpg = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
